# Lunabotics_2024

./: Arduino_NANO_v4.py  Arduino_UNO_v4.py  Arduino_UNO_vReliable.py  Aut_controller_joy_v2.py  Aut_controller_joy_v4.py  Brain_v2.py  Jetson_test.py  Navigation_node_v2.py  PID_motor_node_v2.py  PID_node.py  PID_tiltact_node_v2.py  README.md
can/Phoenix-Linux-SocketCAN-Example/: CMakeLists.txt  example.cpp  main.py
launch/: Joy_control_Ard.launch.py  Key_control_Ard.launch.py  Poseidonv2.launch.py  Poseidonv3.launch.py  Poseidonv4.launch.py  Poseidonv5.launch.py  Poseidonv6.launch.py  Poseidonv7.launch.py  lunabotics_launch.py  readme.md
lcddev/: jetson_serial.py  jetson_serial_withtemptest.py  main.ino  readme.txt
movement/: crater_detector.py  example_sparkmax_node.py  nav2_bringup.launch.py  realsense_d455.launch.py
potentialwebgui/: readme
sparkmaxlaunch/: nav2_params.yaml  nav2_slam_launch.py  readme.txt  slam_toolbox_params.yaml  sparkmax_control_node.py
src/: Arduino_node.py  Arduino_node_v2.py  Arduino_node_v3.py  Aut_controller_joy_v3.py  Aut_controller_v2.py  Brain_v2_joystick.py  Jetson_node_v2.py  PID_linact_node_v2.py  README.txt  command.py  filter.py  motor_controller.py  motor_controller_v2.py  readme.md
src/control_pkg/: CMakeLists.txt  canable_start.sh
src/control_pkg/src/: excavation.cpp
src/motor_control_pkg/: CMakeLists.txt
src/motor_control_pkg/src/: manual_control.cpp
webgui/: app.py  index.html  menu.css  server.py  setmode.js
webgui/static/css/: styles.css
webgui/templates/: index.html
